[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/SpritesFinais/Objetos/Jogar Botão.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ChangeScene.gd" type="Script" id=2]
[ext_resource path="res://Sprites/SpritesFinais/Objetos/Créditos.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Concepts/seta_.png" type="Texture" id=4]
[ext_resource path="res://Sprites/SpritesFinais/Objetos/Créditos Botão.png" type="Texture" id=5]
[ext_resource path="res://Sprites/SpritesFinais/Objetos/Sair Botão.png" type="Texture" id=6]
[ext_resource path="res://Sprites/SpritesFinais/Fundo cenas/Interface.png" type="Texture" id=7]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 501.187 ],
"_edit_vertical_guides_": [ 815.216 ]
}
path = "res://Cenas/CenasMenu/Corredor.tscn"

[node name="Interface" type="Sprite" parent="."]
position = Vector2( 799.94, 451.495 )
scale = Vector2( 0.835, 0.835 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Jogar" type="TextureButton" parent="."]
margin_left = 715.289
margin_top = 514.431
margin_right = 1016.29
margin_bottom = 655.431
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Creditos" type="TextureButton" parent="."]
margin_left = 745.108
margin_top = 629.838
margin_right = 1046.11
margin_bottom = 770.838
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Sair" type="TextureButton" parent="."]
margin_left = 741.54
margin_top = 716.487
margin_right = 1042.54
margin_bottom = 857.487
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="CreditosPopUP" type="Control" parent="."]
visible = false
margin_left = 813.573
margin_top = 451.923
margin_right = 813.573
margin_bottom = 451.923
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLock" type="Control" parent="CreditosPopUP"]
margin_left = -510.079
margin_top = -291.339
margin_right = 529.921
margin_bottom = 328.661
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="CreditosPopUP"]
position = Vector2( 0, -16.0458 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="VoltarCreditos" type="ToolButton" parent="CreditosPopUP"]
margin_left = -96.5376
margin_top = 69.3318
margin_right = 161.462
margin_bottom = 282.332
rect_scale = Vector2( 0.2, 0.15 )
icon = ExtResource( 4 )
[connection signal="pressed" from="Jogar" to="." method="_on_Jogar_pressed"]
[connection signal="pressed" from="Creditos" to="." method="_on_Creditos_pressed"]
[connection signal="pressed" from="CreditosPopUP/VoltarCreditos" to="." method="_on_VoltarCreditos_pressed"]
